# cdg

./: CHANGELOG.md  LICENSE  cdg.cabal
app/: Main.hs
src/: CDG.hs
src/CDG/: Constants.hs  Eval.hs
