cabal-version:      3.0
name:               cdg
version:            0.1.0.0
-- synopsis:
-- description:
license:            ISC
license-file:       LICENSE
author:             Iavor S. Diatchki
maintainer:         iavor.diatchki@gmail.com
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common stuff
    ghc-options: -Wall
    default-extensions:
      ImportQualifiedPost,
      RecordWildCards

library
    import: stuff
    exposed-modules:  CDG, Eval
    -- other-modules:
    -- other-extensions:
    build-depends:
      base, bytestring, vector, binary, JuicyPixels
    hs-source-dirs:   src
    default-language: Haskell2010

executable cdg
  import: stuff
  main-is: Main.hs
  build-depends:
    base, bytestring, binary, cdg
  hs-source-dirs: app
  default-language: Haskell2010
